--- a/templates/about.html
+++ b/templates/about.html
@@ -2,5 +2,9 @@
     <h3>This is the crime data in Howard County, Maryland that I have collected from HCPD from January to March 2022.
         The process involved using BeautifulSoup to extract the data and displaying it on this Flask website.
         The goal is to inform the public about crime rates, trends, and social sentiment regarding crimes.
+        
+        Note: Unauthorized copying and/or producing any section of this website is illegal.
+        
+        Special thanks to Dr. Chao Wu for assisting me with this project.
     </h3>
 </html>
